# CodeConverter

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CodeConverter  CodeSample1.txt  CodeSample3.txt  Makefile  README.md  a.out  base.php  cmake_install.cmake  main.c  main.c.php  main.h.php  parseInput.c  parseInput.c.php  parseInput.h  parseInput.h.php
Testing/Temporary/: CTestCostData.txt
app_modules/multiline_comments/: flag  main.c  main.h  out.test
app_modules/sample/: Makefile  command_line_mode.c  help.c  main.c  main.h  new_char.c  parseChar.c
app_modules/singleline_comments/: main.c  main.h
app_modules/strip_str_literals/: flag  in.test  main.c  main.h  out.test
modules/: multiline_comments.c  multiline_comments.h  sample.c  singleline_comments.c  singleline_comments.h
modules/multiline_comments/: main.c  main.h  multiline_comments.c
modules/sample/: flags.test  main.c  main.h  sample.c  sample.h
modules/singleline_comments/: in.test  main.c  main.h  singleline_comments.c
sys_modules/string/: Makefile  main.c  main.h
